--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "wr3-simulation-rnd2",
   "version": "0.1.0",
   "private": true,
+  "main": "server/index.js",
+  "proxy": "http://localhost:3993",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
